force-app/main/default/objects/SecOps_Capability__mdt/SecOps_Capability__mdt.object-meta.xml
<CustomObject>
    <description>Cached probe of which SecOps capabilities are available in the org.</description>
    <label>SecOps Capability</label>
    <pluralLabel>SecOps Capabilities</pluralLabel>
</CustomObject>