force-app/main/default/objects/SecOps_Capability__mdt/fields/EventLogFile_Available__c.field-meta.xml
<CustomField>
    <fullName>EventLogFile_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the EventLogFile object is queryable in this org.</description>
    <label>EventLogFile Available</label>
    <type>Checkbox</type>
</CustomField>