force-app/main/default/objects/SecOps_Capability__mdt/fields/Last_Probed__c.field-meta.xml
<CustomField>
    <fullName>Last_Probed__c</fullName>
    <description>Timestamp when capability probe last ran.</description>
    <label>Last Probed</label>
    <type>DateTime</type>
</CustomField>