force-app/main/default/objects/SecOps_Capability__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form notes about probe results or gaps.</description>
    <label>Notes</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>