force-app/main/default/objects/SecOps_Capability__mdt/fields/RealTimeEventMonitoring_Available__c.field-meta.xml
<CustomField>
    <fullName>RealTimeEventMonitoring_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Real-Time Event Monitoring streams are accessible in this org.</description>
    <label>Real-Time Event Monitoring Available</label>
    <type>Checkbox</type>
</CustomField>