force-app/main/default/objects/SecOps_Capability__mdt/fields/TransactionSecurity_Available__c.field-meta.xml
<CustomField>
    <fullName>TransactionSecurity_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Transaction Security Policies are usable in this org.</description>
    <label>Transaction Security Available</label>
    <type>Checkbox</type>
</CustomField>